make use of sdk

--- a/src/ExampleFeatureFlagService.ExampleApp/ExampleFeatureFlagService.ExampleApp.csproj
+++ b/src/ExampleFeatureFlagService.ExampleApp/ExampleFeatureFlagService.ExampleApp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
+    <PackageReference Include="ExampleFeatureFlagService.SDK" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
