--- a/src/ExampleFeatureFlagService.Client/ExampleFeatureFlagService.Client.csproj
+++ b/src/ExampleFeatureFlagService.Client/ExampleFeatureFlagService.Client.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExampleFeatureFlagService.SDK" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
